--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,6 @@
     "version": "0.1",
     "description": "php library for communicating with Twitter API",
     "autoload": {
-        "psr-0": { "TwitterApi": "" }
-    },
-    "target-dir": "ttibensky/TwitterApi"
+        "psr-0": { "ttibensky\\TwitterApi": "" }
+    }
 }
