--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,6 @@
     "description": "php library for communicating with Twitter API",
     "autoload": {
         "psr-0": { "TTibensky\\TwitterApi": "" }
-    }
+    },
+    "target-dir": "TTibensky/TwitterApi"
 }
